# ai_music_analyzer

./: .gitignore  INSTALLS.md  README.md  ai_analyzer_backend.py  ai_analyzer_gui.py  backend_server.py  build_kb.py  developer_notes.md  implementation_plan.md  package-lock.json  project_tools.md  pyproject.toml  requirements.txt  task.md  walkthrough.md
ai-music-analyzer_UI/: README.md  index.html  index.tsx  metadata.json  package-lock.json  package.json
ai_analyzer_ui/: package-lock.json  package.json  server.js  tailwind.config.js
ai_analyzer_ui/public/: app.js  index.html  script.js  style.css
ai_analyzer_ui/src/: input.css
kb/: creative_big_room.md  creative_dnb.md  creative_dubstep.md  creative_future_bass.md  creative_hardstyle.md  creative_melodic_techno.md  creative_progressive_house.md  creative_trance.md  generic_lufs.md  generic_mastering.md  generic_sidechain.md  harmony_big_room.md  harmony_dnb.md  harmony_future_bass.md  harmony_hardstyle.md  harmony_melodic_techno.md  harmony_progressive_house.md  harmony_trance.md  mix_big_room.md  mix_dnb.md  mix_dubstep.md  mix_future_bass.md  mix_hardstyle.md  mix_melodic_techno.md  mix_progressive_house.md  mix_trance.md
